--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1243,10 +1243,12 @@ workflows:
         - not: << pipeline.parameters.generate_snapshots >>
         - not: << pipeline.parameters.generate_revenuecatui_snapshots >>
     jobs:
-      - lint
-      - run-test-ios-17
-      - pod-lib-lint
-      - run-revenuecat-ui-ios-17
+      # - lint
+      # - run-test-ios-17
+      # - pod-lib-lint
+      # - run-revenuecat-ui-ios-17
+      # TODO: undo before merging, this is for testing only
+      - installation-tests-carthage
 
   create-tag:
     when:
