--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1249,10 +1249,12 @@ workflows:
         - not: << pipeline.parameters.generate_snapshots >>
         - not: << pipeline.parameters.generate_revenuecatui_snapshots >>
     jobs:
-      - lint
-      - run-test-ios-17
-      - pod-lib-lint
-      - run-revenuecat-ui-ios-17
+      # todo: undo, temporarily commenting out to test xcframework output
+      # - lint
+      # - run-test-ios-17
+      # - pod-lib-lint
+      # - run-revenuecat-ui-ios-17
+      - release-checks
 
   create-tag:
     when:
