--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,19 @@ executors:
       CIRCLECI_TESTS_GENERATE_REVENUECAT_UI_SNAPSHOTS: << pipeline.parameters.generate_revenuecatui_snapshots >>
     working_directory: ~/purchases-ios
     shell: /bin/bash --login -o pipefail
+  macos-executor-large:
+    parameters:
+      xcode_version:
+        type: string
+        default: '15.3'
+    macos:
+      xcode: << parameters.xcode_version >>
+    resource_class: macos.m1.large.gen1
+    environment:
+      CIRCLECI_TESTS_GENERATE_SNAPSHOTS: << pipeline.parameters.generate_snapshots >>
+      CIRCLECI_TESTS_GENERATE_REVENUECAT_UI_SNAPSHOTS: << pipeline.parameters.generate_revenuecatui_snapshots >>
+    working_directory: ~/purchases-ios
+    shell: /bin/bash --login -o pipefail
 
 aliases:
   release-branches: &release-branches
@@ -1034,8 +1047,7 @@ jobs:
 
   installation-tests-carthage:
     executor:
-      name: macos-executor
-      resource_class: macos.m1.large.gen1
+      name: macos-executor-large
     steps:
       - checkout
       - trust-github-key
